kubernetes/backend.yml
apiVersion: v1
kind: Service
metadata:
  name: shortorial-backend-service
spec:
  selector:
    app: shortorial
    tier: backend
  ports:
    - port: 80
      targetPort: 8080
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shortorial-backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shortorial
      tier: backend
  template:
    metadata:
      labels:
        app: shortorial
        tier: backend
    spec:
      containers:
        - name: shortorial-backend
          image: dyckerkim/shortorial-backend:latest
