kubernetes/frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: shortorial-frontend-service
spec:
  selector:
    app: shortorial
    tier: frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shortorial-frontend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: shortorial
      tier: frontend
  template:
    metadata:
      labels:
        app: shortorial
        tier: frontend
    spec:
      containers:
        - name: shortorial-frontend
          image: dyckerkim/shortorial-frontend:latest
