kubernetes/mysql.yml
apiVersion: v1
kind: Service
metadata:
  name: shortorial-database-service
spec:
  selector:
    app: shortorial
    tier: database
  ports:
    - port: 3306 # 동일 포트 사용
      targetPort: 3306
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shortorial-database-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shortorial
      tier: database
  template:
    metadata:
      labels:
        app: shortorial
        tier: database
    spec:
      containers:
        - name: shortorial-database
          image: mysql:8.0
          volumeMounts:
            - name: database-config-volume
              mountPath: /etc/mysql/my.cnf # /etc/mysql/my.cnf 파일(mysql 설정파일)을 shortorial-database-config로 설정
              subPath: my.cnf
            - name: shortorial-volume
              mountPath: /var/lib/mysql # /var/lib/mysql(mysql이 컨테이너에 데이터를 저장하는 경로)를 외부 pv에 연결하여 영구 저장
      volumes: # my.cnf는 환경변수가 아니라 !파일!이라서 볼륨으로 설정안하면 적용 못함
        - name: database-config-volume
          configMap: # config map으로 설정 파일을 읽음
            name: shortorial-database-config
        - name: shortorial-volume # pvc를 볼륨으로 설정
          persistentVolumeClaim:
            claimName: shortorial-pvc
          # resources:
          #   limits:
          #     memory: "128Mi"
          #     cpu: "500m"
# mysql 초기 데이터 넣기
# kubectl cp ./data.sql <mysql-pod-name>:/tmp/data.sql
# ./data.sql -> 로컬 위치, <mysql-pod-name>:/tmp/data.sql -> /tmp 경로에 복사
# kubectl exec -it {데이터베이스 pod 이름} -- mysql -u {유저이름} -p
# 이대로 입력하고 다음 줄에 패스워드 입력하면 mysql 접속
# use {데이터베이스 이름};
# source /tmp/data.sql;
# /tmp/data.sql 실행됨
