kubernetes/redis.yml
apiVersion: v1
kind: Service
metadata:
  name: shortorial-redis-service
spec:
  selector:
    app: shortorial
    tier: cache
  ports:
    - port: 6379
      targetPort: 6379
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shortorial-redis-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shortorial
      tier: cache
  template:
    metadata:
      labels:
        app: shortorial
        tier: cache
    spec:
      containers:
        - name: shortorial-cache
          image: redis:6.2
