kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shortorial-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:058264434288:certificate/e6deef11-d4e7-45e8-a702-eff997413a1e
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
  labels:
    app: ingress
spec:
  ingressClassName: alb
  rules:
    - host: www.shortorial.site
      http:
        paths:
          - pathType: Prefix
            path: "/api"
            backend:
              service:
                name: shortorial-backend-service
                port:
                  number: 80
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: shortorial-frontend-service
                port:
                  number: 80
